# SecurePass

./: README.md  api_server.py  main.py  manage.py  pyproject.toml  requirements.txt  setup.py
api/: app.py
api/auth/: blacklist.py  middleware.py
api/blueprints/: __init__.py  api.py  vault.py
app/: config.py  crypto.py
app/cli/: cli.py
app/db/: __init__.py  db_users.py  db_vault.py  user_model.py  vault_model.py
app/recovery/: backup_file_prep.py  keyrings.py
deployment/: README.md  securepass-api.service
test/: conftest.py  crypto.py
