[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "password-manager-server"
version = "0.1.0"
description = "A secure password manager with encrypted storage"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
dependencies = [
    "cffi==1.17.1",
    "colorama==0.4.6",
    "cryptography==45.0.5",
    "greenlet==3.2.3",
    "iniconfig==2.1.0",
    "jaraco.classes==3.4.0",
    "jaraco.context==6.0.1",
    "jaraco.functools==4.2.1",
    "keyring==25.6.0",
    "more-itertools==10.7.0",
    "packaging==25.0",
    "pluggy==1.6.0",
    "pycparser==2.22",
    "Pygments==2.19.2",
    "pytest==8.4.1",
    "pywin32-ctypes==0.2.3",
    "SQLAlchemy==2.0.41",
    "typing_extensions==4.14.1",
]

[project.scripts]
securepass = "main:main"

[tool.pytest.ini_options]
testpaths = ["test"]
python_files = ["test_*.py", "*_test.py", "test*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
    "--disable-warnings",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]
